# GiftGenius

./: .replit  README.md  analytics.py  app.py  auth.py  cert.pem  client_secrets.json  config.py  ebay_integration.py  etsy_integration.py  events.py  feedback.py  google_shopping_integration.py  group_gifts.py  key.pem  main.py  ml_model.py  models.py  orders.py  package-lock.json  package.json  pyproject.toml  recommendations.py  test_ebay_integration.py  test_etsy_integration.py  test_gift_options.py  test_google_shopping_integration.py  test_recommendations.py  test_referral.py  walmart_integration.py
GiftingPlatformMobile/: App.js  package.json
GiftingPlatformMobile/src/screens/: EventsScreen.js  HomeScreen.js  LoginScreen.js  RecommendationsScreen.js  SignupScreen.js
frontend/: package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: Home.js  Login.js  Signup.js
migrations/versions/: 3bd50ab343de_add_referral_count_to_user_model.py  90785545ca16_add_referral_model.py  cbbd9567ae01_initial_migration.py
static/css/: custom.css
static/js/: main.js
templates/: base.html  cart.html  create_group_gift.html  group_gift_details.html  group_gifts.html  home.html  login.html  order_details.html  profile.html  recommendations.html  referral.html  signup.html
